--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -1,5 +1,11 @@
 #i18n {
     border: 1px solid white;
-    padding: 5px;
+    padding: 5px 10px 0px 10px;
     border-radius: 0.5rem;
+    font-size: 0.2rem;
+}
+
+.tech {
+
+    padding: 100px;
 }
