--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1837,3 +1837,6 @@ a#logo{margin-top:15px;}
 .develop_bottom .black_fang i{height:20px;background:#333;width:20px;display:inline-block;border-radius:100%;}
 .index_develop_list{margin-bottom:45px;}
 .foot_logo{display:block;margin:0 auto;height:50px;}
+
+/******************************2018-6-25************************************/
+.features_box .index_team_img h4{display:block;height:30px;line-height:30px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
