--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -22,7 +22,7 @@
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     /*background-color: rgb(0,0,0);  Fallback color */  
-    /*background-color: rgba(0,0,0,0.4); /* Black w/ opacity */*/
+    /*background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -50,5 +50,14 @@
     cursor: pointer;
 }
 .modal img{
-
+    width: 80%;
+}
+@media screen and (max-width: 1000px) {
+    .modal-content{
+        width: 80%;
+    }
+    #poster {
+        width: 90%;
+        margin-left: 5%; 
+    }
 }
