--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1935,3 +1935,466 @@ a#logo{margin-top:15px;}
 @media screen and (max-width:1023px){
     .cd-popup-container1{width:80%;}
 }
+
+/*********************************************************2019-7-1**************************************/
+.cd-popup1 .con ul li{padding:0px;border:none;}
+.cd-popup1 .con ul li .label{line-height:30px;font-size:16px;text-align:left;}
+.cd-popup-container1{border-radius:10px;}
+.cd-popup-container1 .title{font-size:22px;
+	color: #555555;
+	line-height: 1.2;
+	text-transform: uppercase;
+	text-align: left;
+	width: 100%;
+	display: block;}
+.cd-popup1 .con ul li .input_w .focus-input100{
+	position: absolute;
+	display: block;
+	width: calc(100% + 2px);
+	height: calc(100% + 2px);
+	top: -1px;
+	left: -1px;
+	pointer-events: none;
+	border: 1px solid #003caa;
+	border-radius: 3px;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;
+	-webkit-transform: scaleX(1.1) scaleY(1.3);
+	-moz-transform: scaleX(1.1) scaleY(1.3);
+	-ms-transform: scaleX(1.1) scaleY(1.3);
+	-o-transform: scaleX(1.1) scaleY(1.3);
+	transform: scaleX(1.1) scaleY(1.3);
+}
+.cd-popup1 .con ul li .input_w input:focus + .focus-input100 {
+	visibility: visible;
+	opacity: 1;
+
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	-o-transform: scale(1);
+	transform: scale(1);
+}
+.cd-popup1 .con ul li .input_w {
+	width: 100%;
+	position: relative;
+	background-color: #fff;
+	border: 1px solid #e6e6e6;
+	border-radius: 2px;
+}
+.cd-popup1 .con ul li .input_w input{    color: #555555;
+	line-height: 1.2;
+	font-size: 16px;
+	display: block;
+	width: 100%;
+	background: transparent;
+	height:45px;
+	padding: 0 25px 0 25px;}
+.cd-popup-container1{width:500px;}
+@media screen and (max-width:1023px){
+	.cd-popup-container1{width:80%;}
+}
+.login100-form-btn {
+
+	font-size: 16px;
+	color: #fff;
+	line-height: 1.2;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: inline-block;
+	justify-content: center;
+	align-items: center;
+	padding: 0 20px;
+	min-width: 150px;
+	height:45px;
+	background-color: #999;
+	border-radius: 27px;
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;border:none;
+	outline:none;
+}
+.login100-form-btn:hover{background:#003caa}
+.cd-popup-close{transition:all .3s;}
+.cd-popup-close:hover{
+	border:1px solid #003caa;color:#003caa;
+}
+.cd-popup1 .con ul li.last{
+	text-align:left;}
+.frr{
+	float: right;}
+.login_txt_fr{text-align:right;line-height: 1.2;height:45px;line-height:45px;}
+.login_txt_fr .log_a{color:#ff0000;}
+
+.cd-popup1 .con ul li .yan_but{
+	display: block;
+	position:absolute;left:auto;right:10px;
+	height:35px;border-radius:10px;background:#ccc;min-width:100px;top:5px;line-height:35px;cursor:pointer;}
+
+
+/*********************************************购物车页面********************************/
+.cart_banner_title{background:#87d2e7;}
+.cart_banner_title .nine_section{background:none;}
+.cart_banner_title_t{font-size:30px;color:#fff;}
+
+/***********************************表格******************/
+table.responsive{
+	width: 98%;
+	margin: 0 auto;
+	vertical-align:middle !important;
+
+
+}
+table.responsive th{text-align:center;border:none;color:#003caa;line-height:30px;}
+table.responsive td{
+	padding:20px 10px;border-top:1px solid #eee;border-bottom:1px solid #eee;text-align:center;vertical-align:middle;
+}
+/*设置表头背景色*/
+table.responsive th{
+	text-align:center;
+}
+
+/*设置表格内容为居中对齐*/
+table.responsive .number,table.responsive .actions{
+	text-align: center;
+}
+
+
+
+.pro_img img{display:block;width:200px;float:left;}
+.pro_img .txt{margin-left:220px;text-align:left;padding-top:25px;}
+.pro_img .txt .name{font-size:16px;line-height:30px;height:30px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;color:#005aaa}
+.pro_img .txt .c{
+	font-size: 14px;margin:5px 0;line-height:1.5;}
+table.responsive .num_input{height:24px;width:40px;border:1px solid #eee;line-height:24px;text-align:center;color:#000;outline:none;}
+.cart_button{margin:30px 0px;}
+.cart_button .but{padding:0px 20px;height:40px;line-height:40px;border-radius:5px;text-align:center;display:inline-block;
+	margin-left:15px;}
+.cart_button .but.red{background:#ff0000;color:#fff;}
+table.responsive th{font-size:16px;line-height:40px;}
+
+@media(max-width:640px){
+	table.responsive{
+		box-shadow: none;
+		border:none;
+	}
+	table.responsive thead{
+		display: none;
+	}
+	/*把所有的tr,td进行块状分布*/
+	table.responsive tr,table.responsive td{
+		display: block;
+		border: none;
+		position: relative;
+	}
+	table.responsive tr{
+		margin-bottom: 1em;
+		box-shadow: 0 1px 10px 0 rgba(0,0,0,.2);
+	}
+	table.responsive .price{
+		text-align: left;
+		padding-left: 28%;
+
+	}
+	table.responsive .price::before{
+		content: "价格";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+
+
+	table.responsive .pro_img{
+		text-align: left;
+		padding-left: 28%;
+	}
+	table.responsive .pro_img::before{
+		content: "产品";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+
+
+	table.responsive .num{
+		text-align: left;
+		padding-left: 28%;
+	}
+	table.responsive .num::before{
+		content: "数量";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+	table.responsive .price_total{
+		text-align: left;
+		padding-left: 28%;
+	}
+	table.responsive .price_total::before{
+		content: "总价";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+
+	.pro_img img{display:block;width:200px;float:none;margin:0 auto;}
+	.pro_img .txt{margin-left:0px;text-align:left;padding:15px 0px;}
+
+
+	table.responsive .price{
+		text-align: left;
+		padding-left: 28%;
+
+	}
+	table.responsive .price::before{
+		content: "价格";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+
+
+	table.responsive .name{
+		text-align: left;
+		padding-left: 28%;padding-top:5px;padding-bottom:5px;padding-right:5px;
+	}
+	table.responsive .name::before{
+		content: "姓名";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+
+
+	table.responsive .tel{
+		text-align: left;
+		padding-left: 28%;padding-top:5px;padding-bottom:5px;padding-right:5px;
+	}
+	table.responsive .tel::before{
+		content: "电话";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+	table.responsive .address{
+		text-align: left;
+		padding-left: 28%;padding-top:5px;padding-bottom:5px;padding-right:5px;
+	}
+	table.responsive .address::before{
+		content: "地址";
+		position: absolute;
+		left: 10px;
+		top:50%;
+		font-weight: bold;
+		height:20px;
+		line-height:20px;margin-top:-10px;
+		color:#003caa;
+		font-size:16px;
+	}
+
+
+}
+
+/****************************************兑换成功**************************************************/
+.cart_success_title{border-bottom:1px solid #eee;font-size:22px;line-height:2;}
+.cart_success_con{padding:40px 0px;
+	font-size:14px;line-height:1.5;border-bottom:1px solid #eee;}
+.cart_success_con ul{overflow:hidden;}
+.cart_success_con ul li{overflow:hidden;line-height:32px;height:32px;}
+.cart_success_con ul li .li_l{width:170px;float:left;color:#000;}
+.cart_success_con ul li .li_r{margin-left:185px;color:#666;}
+.cart_success_t{margin-top:25px;}
+.cart_success_t .t{font-size:18px;line-height:36px;}
+.cart_success_t p{margin-bottom:0px;}
+.cart_success_t .c{font-size:13px;color:#000;}
+.cart_address{font-size:14px;color:#003caa;margin:25px auto;cursor:pointer;}
+.cart_address i{display:inline;
+	margin-right:6px;}
+.cart_address_detail{background:#f7f7f7;margin:15px 0px;}
+.cart_address_detail ul{overflow:hidden;margin:0px;}
+.cart_address_detail ul li{overflow:hidden;line-height:32px;height:32px;text-align:right}
+
+
+.register_form{
+	position: relative;
+	width:50%;
+	top:50%;margin:-190px auto auto auto;
+	padding:25px;
+	background: #FFF;
+	border-radius: .4rem .4rem .4rem .4rem;
+	text-align: center;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+	-webkit-transform: translateY(-60px);
+	-moz-transform: translateY(-60px);
+	-ms-transform: translateY(-60px);
+	-o-transform: translateY(-60px);
+	transform: translateY(-60px);
+	-webkit-backface-visibility: hidden;
+	-webkit-transition-property: -webkit-transform;
+	-moz-transition-property: -moz-transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.3s;
+	-moz-transition-duration: 0.3s;
+	-ms-transition-duration: 0.3s;
+	-o-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+}
+.register_form{border-radius:10px;}
+.register_form .title{font-size:22px;
+	color: #555555;
+	line-height: 1.2;
+	text-transform: uppercase;
+	text-align: left;
+	width: 100%;
+	display: block;}
+
+
+.register_form{width:500px;}
+.register_bg {
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	-moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	z-index:9999;
+}
+.register_bg.is-visible1 {
+	opacity: 1;
+	visibility: visible;
+	-webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+	-moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+	transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+.register_bg.is-visible1 .register_form{
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0);
+	transform: translateY(0);
+}
+@media screen and (max-width:1023px){
+	.register_form{width:80%;}
+}
+
+
+.register_bg .title{font-size:18px;font-weight:bold;}
+.register_bg .con{margin:25px 0px 0px 0px;}
+.register_bg .con ul li{margin:15px 0;padding:0px 10px;border:1px solid #ccc;border-radius:5px;}
+.register_bg .con ul li input{display:block;height:36px;border-radius:5px;width:100%;border:none;outline:none;font-size:14px;}
+.register_bg .con ul li.last{border:none;}
+.register_bg .con ul li .button{transition:all .3s;cursor:pointer;width:100px;height:32px;border-radius:5px;line-height:32px;text-align:center;display:inline-block;border:none;outline:none;margin:0px 5px;}
+.register_bg .con ul li .button:hover{opacity:.8}
+.register_bg .con ul li .button.but_red{background:#003caa;color:#fff;}
+.register_bg .con ul li .button.but_gray{background:#ccc;color:#fff;}
+
+.register_bg .con ul li{padding:0px;border:none;}
+.register_bg .con ul li .label{line-height:30px;font-size:16px;text-align:left;}
+.register_bg .con ul li .input_w .focus-input100{
+	position: absolute;
+	display: block;
+	width: calc(100% + 2px);
+	height: calc(100% + 2px);
+	top: -1px;
+	left: -1px;
+	pointer-events: none;
+	border: 1px solid #003caa;
+	border-radius: 3px;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;
+	-webkit-transform: scaleX(1.1) scaleY(1.3);
+	-moz-transform: scaleX(1.1) scaleY(1.3);
+	-ms-transform: scaleX(1.1) scaleY(1.3);
+	-o-transform: scaleX(1.1) scaleY(1.3);
+	transform: scaleX(1.1) scaleY(1.3);
+}
+.register_bg .con ul li .input_w input:focus + .focus-input100 {
+	visibility: visible;
+	opacity: 1;
+
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	-o-transform: scale(1);
+	transform: scale(1);
+}
+.register_bg .con ul li .input_w {
+	width: 100%;
+	position: relative;
+	background-color: #fff;
+	border: 1px solid #e6e6e6;
+	border-radius: 2px;
+}
+.register_bg .con ul li .input_w input{    color: #555555;
+	line-height: 1.2;
+	font-size: 16px;
+	display: block;
+	width: 100%;
+	background: transparent;
+	height:45px;
+	padding: 0 25px 0 25px;}
+.register_bg .con ul li.last{
+	text-align:left;}
+
+.register_bg .con ul li .yan_but{
+	display: block;
+	position:absolute;left:auto;right:10px;
+	height:35px;border-radius:10px;background:#ccc;min-width:100px;top:5px;line-height:35px;cursor:pointer;}
+
+
+.reg_close{ position: absolute;right:10px;top:10px; z-index: 10;width:auto; display: block;font-size:14px;width:20px;height:20px;border:1px solid #333;border-radius:100%;text-align:center;line-height:20px;}
+.reg_close{transition:all .3s;}
+.reg_close:hover{
+	border:1px solid #003caa;color:#003caa;
+}
