--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -2481,3 +2481,87 @@ table.responsive th{font-size:16px;line-height:40px;}
 #outer{min-height:540px;}
 .cart_table{overflow:hidden;}
 .profile_new{max-width:1000px;margin:0 auto;}
+
+/**************************************2018-7-2******************************/
+.header_profile{position:absolute;right:-115px;top:0px;margin: 34px 14px 0 14px;line-height:20px;max-width:100px;height:20px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
+.header_profile a{display:inline-block;color:#fff;margin-right:6px;font-size:12px;text-decoration:underline;line-height:20px;}
+.header_profile a:hover{text-decoration: none;}
+.header_profile i{display:inline;margin-right:5px;
+	text-decoration: none;font-size:18px;}
+.header_profile a.user_a{text-decoration:none;}
+@media(max-width:769px){.header_profile {right:100px;}}
+
+
+
+
+/*弹框样式2*/
+.cd-popup2 {
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	-moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	z-index:9999;
+}
+.cd-popup2.is-visible2 {
+	opacity: 1;
+	visibility: visible;
+	-webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+	-moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+	transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+.cd-popup-container2 {
+	position: relative;
+	width:50%;
+	top:50%;margin:-190px auto auto auto;
+	padding:25px;
+	background: #FFF;
+	border-radius: .4rem .4rem .4rem .4rem;
+	text-align: center;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+	-webkit-transform: translateY(-60px);
+	-moz-transform: translateY(-60px);
+	-ms-transform: translateY(-60px);
+	-o-transform: translateY(-60px);
+	transform: translateY(-60px);
+	-webkit-backface-visibility: hidden;
+	-webkit-transition-property: -webkit-transform;
+	-moz-transition-property: -moz-transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.3s;
+	-moz-transition-duration: 0.3s;
+	-ms-transition-duration: 0.3s;
+	-o-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+}
+.cd-popup-close{ position: absolute;right:10px;top:10px; z-index: 10;width:auto; display: block;font-size:14px;width:20px;height:20px;border:1px solid #333;border-radius:100%;text-align:center;line-height:20px;}
+.is-visible2 .cd-popup-container2 {
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0);
+	transform: translateY(0);
+}
+.cd-popup2.title{font-size:18px;font-weight:bold;}
+.cd-popup2 .con{margin:25px 0px 0px 0px;}
+.cd-popup2 .con ul li{margin:15px 0;padding:0px 10px;border:1px solid #ccc;border-radius:5px;}
+.cd-popup2 .con ul li input{display:block;height:36px;border-radius:5px;width:100%;border:none;outline:none;font-size:14px;}
+.cd-popup2 .con ul li.last{border:none;}
+.cd-popup2 .con ul li .button{transition:all .3s;cursor:pointer;width:100px;height:32px;border-radius:5px;line-height:32px;text-align:center;display:inline-block;border:none;outline:none;margin:0px 5px;}
+.cd-popup2 .con ul li .button:hover{opacity:.8}
+.cd-popup2 .con ul li .button.but_red{background:#003caa;color:#fff;}
+.cd-popup2 .con ul li .button.but_gray{background:#ccc;color:#fff;}
+.money_title{border-bottom:1px solid #eee;padding:10px 0px;}
+.money_title .t{font-size:18px;}
+.money_con .tip_logo img{display:block;margin:15px auto;width:100px;height:100px;}
+.money_con .tip{font-size:12px;color:#999;text-align:center;}
+.money_con .tip p{margin:0px;}
+.money_con .money_but{color:#fff;display:block;margin:20px auto;background:#003caa;height:45px;line-height:45px;text-align:center;width:70%;border-radius:5px;font-size:16px;transition:all 0.3s;}
+.money_con .money_but:hover{
+	opacity:.7;filter:alpha(opacity=70)}
