--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -6,7 +6,7 @@
 
   {{#*inline "content-block"}}
         <!--begin header_wrapper -->
-    <header id="header_wrapper" class="shrink">
+    {{!-- <header id="header_wrapper" class="shrink">
         <!--begin header -->
         <div id="header" class="clearfix">
             <!--begin row -->
@@ -57,7 +57,7 @@
         </div>
         <!--end header -->
 
-    </header>
+    </header> --}}
     <!--end header_wrapper -->
 
     <!-----第一版------------->
