--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 {{#> layouts/base }}
   {{#*inline "content-block"}}
-    <header id="intro">
+    {{!-- <header id="intro">
       <div class="stars"></div>
       <div class="twinkling"></div>
       <div class="clouds"></div>
@@ -38,7 +38,9 @@
         </div>
       </nav>
 
-      <div id="home">
+     
+    </header> --}}
+ <div id="home">
           <div class="home_box bounce_fade">
               <span class="slider_text1">{{ translation.PROJECT_NAME }}</span>
               <span class="slider_text2">{{ translation.SLOGON }}</span>
@@ -46,8 +48,7 @@
               <a href="#" class="slider_text4"><i class="fa fa-money"></i>&nbsp;{{ translation.TOKEN_WALLET }}</a>
           </div>
       </div>
-    </header>
-
+      
     <section  class="nine_section_wrapper">
         <!--begin nine_section -->
         <div class="nine_section">
