--- a/views/miner.hbs
+++ b/views/miner.hbs
@@ -6,7 +6,7 @@
 
   {{#*inline "content-block"}}
     <!--begin header_wrapper -->
-    <header id="header_wrapper" class="shrink">
+    {{!-- <header id="header_wrapper" class="shrink">
         <!--begin header -->
         <div id="header" class="clearfix">
             <!--begin row -->
@@ -56,7 +56,7 @@
         </div>
         <!--end header -->
 
-    </header>
+    </header> --}}
 
     <section  class="products">
         <div class="product_detail desktop_type detail_DS418j">
