--- a/views/success.hbs
+++ b/views/success.hbs
@@ -5,7 +5,7 @@
   {{/inline}}
 
   {{#*inline "content-block"}}
-        <header id="header_wrapper" class="shrink">
+        {{!-- <header id="header_wrapper" class="shrink">
         <!--begin header -->
         <div id="header" class="clearfix">
             <!--begin row -->
@@ -55,7 +55,7 @@
         </div>
         <!--end header -->
 
-    </header>
+    </header> --}}
     <!--end header_wrapper -->
 
     <!-----第一版------------->
