--- a/views/order.hbs
+++ b/views/order.hbs
@@ -5,7 +5,7 @@
   {{/inline}}
 
   {{#*inline "content-block"}}
-    <header id="header_wrapper" class="shrink">
+    {{!-- <header id="header_wrapper" class="shrink">
         <!--begin header -->
         <div id="header" class="clearfix">
             <!--begin row -->
@@ -56,7 +56,10 @@
         </div>
         <!--end header -->
 
-    </header>
+    </header> --}}
+
+
+    {{!-- {{#> includes/nav}} --}}
     <!--end header_wrapper -->
     <!-----第一版------------->
     <!--begin nine_section_wrapper -->
