--- a/views/partials/includes/nav.hbs
+++ b/views/partials/includes/nav.hbs
@@ -15,25 +15,25 @@
                     <!--begin nav -->
                     <ul id="nav">
                         <li>
-                            <a href="index.html">{{ translation.HOME }}</a>
+                            <a href="/index">{{ translation.HOME }}</a>
                         </li>
                         <li>
                             <a href="/miner">{{ translation.MINER }}</a>
                         </li>
                         <li>
-                            <a href="index.html#showcase">{{ translation.APPLICATIONS }}</a>
+                            <a href="/index#showcase">{{ translation.APPLICATIONS }}</a>
                         </li>
                         <li>
                             <a href="https://github.com/DescartesChain">{{ translation.TECHNOLOGY }}</a>
                         </li>
                         <li>
-                            <a href="index.html#features">{{ translation.ROADMAP }}</a>
+                            <a href="/index#features">{{ translation.ROADMAP }}</a>
                         </li>
                         <li>
-                            <a href="index.html#pricing">{{ translation.TEAM }}</a>
+                            <a href="/index#pricing">{{ translation.TEAM }}</a>
                         </li>
-                        <li id="i18n"><a href="/order?clang=zh">中文</a></li>
-                        <li id="i18n"><a href="/order?clang=en">English</a></li>
+                        <li id="i18n"><a href="/index?clang=zh">中文</a></li>
+                        <li id="i18n"><a href="/index?clang=en">English</a></li>
                         <!--<li class="last">
                             <a href="#subscribe">Subscribe</a>
                         </li>-->
