--- a/views/success.hbs
+++ b/views/success.hbs
@@ -5,177 +5,76 @@
   {{/inline}}
 
   {{#*inline "content-block"}}
-        {{!-- <header id="header_wrapper" class="shrink">
-        <!--begin header -->
-        <div id="header" class="clearfix">
-            <!--begin row -->
-            <div class="row">
-                <!--begin twelvecol -->
-                <div class="twelvecol">
-                    <!--begin logo -->
-                    <a href="index.html" id="logo"><img src="images/logo.png"></a>
-                    <!--end logo -->
-                    <!--begin purchase button -->
-                    <!--<a href="#" class="purchase">Purchase Now</a>-->
-                    <!--end purchase button -->
-
-                    <!--begin nav -->
-                    <ul id="nav">
-                        <li>
-                            <a href="index.html">首页</a>
-                        </li>
-                        <li>
-                            <a href="">矿机</a>
-                        </li>
-                        <li>
-                            <a href="index.html#showcase">应用场景</a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/DescartesChain">技术资源</a>
-                        </li>
-                        <li>
-                            <a href="index.html#features">发展规划</a>
-                        </li>
-                        <li>
-                            <a href="index.html#pricing">团队</a>
-                        </li>
-                        <li id="i18n"><a href="minerEn.html"> En </a></li>
-                        <!--<li class="last">
-                            <a href="#subscribe">Subscribe</a>
-                        </li>-->
-                    </ul>
-                    <!--end nav -->
-
+    <section  class="nine_section_wrapper sub_order_main">
+        <!--begin nine_section -->
+        <div class="nine_section">
+            <div class="sub_order_con">
+            <!--sub_order_main_title start-->
+            <div class="sub_order_main_title">
+                <div class="t">Thank for your order .</div>
+                <div class="c"> We will notify you as items are dispatched.</div>
+            </div>
+            <!--sub_order_main_title end-->
+            <div class="sub_order_bor">
+                <div class="yin_succ"><img src="images/yin.png"></div>
+            <!--sub_order_product start-->
+            <div class="sub_order_product clearfix">
+                <div class="order_product fl">
+                    <div class="img fl"><img src="images/pro11.jpg"></div>
+                    <div class="name">We will notify you as items are dispatched</div>
                 </div>
-                <!--end twelvecol -->
-
+                <div class="order_product_price frr">
+                  $199.99
+                </div>
             </div>
-            <!--end row -->
-
-        </div>
-        <!--end header -->
-
-    </header> --}}
-    <!--end header_wrapper -->
-
-    <!-----第一版------------->
-    <!--begin nine_section_wrapper -->
-    <section  class="nine_section_wrapper cart_banner_title">
-        <!--begin nine_section -->
-        <div class="nine_section"><div class="cart_banner_title_t">兑换成功</div> </div>
-        <!--end nine_section -->
-    </section>
-    <!--end nine_section -->
-    <!-----第一版------------->
-    <!-----第二版------------->
-    <!--begin nine_section_wrapper -->
-    <section  class="nine_section_wrapper cart_success">
-        <!--begin nine_section -->
-        <div class="nine_section">
-            <div class="cart_success_title">兑换成功</div>
-            <div class="cart_success_t">
-                <p class="t">谢谢您的参与！</p>
-                <p class="c">兑换成功的邮件已经发往您的邮箱，请注意查收。</p>
+            <!--sub_order_product end-->
+            <!--sub_order_deli start-->
+            <div class="sub_order_deli">
+                <div class="li_l">Delivery1</div>
+                <div class="li_r">
+                    <p>Dispatched:Winthin 24 hours</p>
+                    <p>Delivery:9 July,2016 by pre-9:30am Delivery</p>
+                    <div class="more_date">Delivery:9 July,2016 by pre-9:30am Delivery</div>
+                </div>
             </div>
-            <div class="cart_success_con">
-                <ul>
-                    <li class="clearfix">
-                        <div class="li_l text_align_right">订单号：</div>
-                        <div class="li_r">20156326633</div>
-                    </li>
-                    <li class="clearfix">
-                        <div class="li_l text_align_right">姓名：</div>
-                        <div class="li_r">可是大</div>
-                    </li>
-                    <li class="clearfix">
-                        <div class="li_l text_align_right">电话：</div>
-                        <div class="li_r">0371-666666</div>
-                    </li>
-                    <li class="clearfix">
-                        <div class="li_l text_align_right">邮箱：</div>
-                        <div class="li_r">20156326633</div>
-                    </li>
-                </ul>
+            <!--sub_order_deli end-->
+            </div>
+            <!--sub_order_ship start-->
+            <div class="sub_order_deli sub_order_ship">
+                <div class="li_l">Ship to:</div>
+                <div class="li_r">
+                    <p>Dispatched:Winthin 24 hours</p>
+                    <p>Delivery:9 July,2016 by pre-9:30am Delivery</p>
+                    <div class="more_date">Delivery:9 July,2016 by pre-9:30am Delivery</div>
+                </div>
+            </div>
+            <!--sub_order_ship end-->
+            <!--sub_order_bill start-->
+            <div class="sub_order_bill">
+                <div class="sub_order_bill_title">Payment and Billing3 Details</div>
+                <div class="sub_order_deli sub_order_ship">
+                    <div class="li_l">Bill to:</div>
+                    <div class="li_r">
+                        <p>Dispatched:Winthin 24 hours</p>
+                        <p>Delivery:9 July,2016 by pre-9:30am Delivery</p>
+                        <div class="more_date">Delivery:9 July,2016 by pre-9:30am Delivery</div>
+                    </div>
+                </div>
+                <div class="sub_order_deli sub_order_ship">
+                    <div class="li_l">Billing Address:</div>
+                    <div class="li_r">
+                        <p>Dispatched:Winthin 24 hours</p>
+                        <p>Delivery:9 July,2016 by pre-9:30am Delivery</p>
+                        <div class="more_date">Delivery:9 July,2016 by pre-9:30am Delivery</div>
+                    </div>
+                </div>
+            </div>
+            <!--sub_order_bill end-->
             </div>
         </div>
         <!--end nine_section -->
     </section>
     <!--end nine_section -->
-    <!-----第二版------------->
-    <!-----第二版------------->
-    <!--begin nine_section_wrapper -->
-    <section  class="nine_section_wrapper cart_main">
-        <!--begin nine_section -->
-        <div class="nine_section">
-            <div class="cart_table">
-                <table class="responsive" valign="middle">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th>价格</th>
-                        <th>数量</th>
-                        <th>总价</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td class="pro_img">
-                            <div class="pro_td">
-                                <img src="images/pro11.jpg">
-                                <div class="txt">
-                                    <div class="name">第一代高性能笛卡尔矿机</div>
-                                    <div class="c">第一代高性能笛卡尔矿机,第一代高性能笛卡尔矿机</div>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="price">￥100</td>
-                        <td class="num"><input class="num_input" type="text" value="1"></td>
-                        <td class="price_total">
-                            ￥100
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="pro_img">
-                            <div class="pro_td">
-                                <img src="images/pro11.jpg">
-                                <div class="txt">
-                                    <div class="name">第一代高性能笛卡尔矿机</div>
-                                    <div class="c">第一代高性能笛卡尔矿机,第一代高性能笛卡尔矿机</div>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="price">￥100</td>
-                        <td class="num"><input class="num_input" type="text" value="1"></td>
-                        <td class="price_total">
-                            ￥100
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="pro_img">
-                            <div class="pro_td">
-                                <img src="images/pro11.jpg">
-                                <div class="txt">
-                                    <div class="name">第一代高性能笛卡尔矿机</div>
-                                    <div class="c">第一代高性能笛卡尔矿机,第一代高性能笛卡尔矿机</div>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="price">￥100</td>
-                        <td class="num"><input class="num_input" type="text" value="1"></td>
-                        <td class="price_total">
-                            ￥100
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="cart_button text_align_right">
-                <a class="but red" href="">支付</a>
-                <a class="but red" href="">使用兑换码</a>
-            </div>
-        </div>
-        <!--end nine_section -->
-    </section>
   {{/inline}}
 
   {{#*inline "modal-block"}}
@@ -183,6 +82,8 @@
   {{/inline}}
 
   {{#*inline "scripts-block"}}
+    <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/jquery-migrate-1.2.1.js"></script>
     <!-- scripts concatenated and minified via ant build script-->
     <script src="js/modernizr-2.6.1.min.js"></script>
     <script src="js/conditional.js"></script>
