--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,45 +1,10 @@
 {{#> layouts/base }}
   {{#*inline "content-block"}}
-    {{!-- <header id="intro">
+    <header id="intro">
       <div class="stars"></div>
       <div class="twinkling"></div>
-      <div class="clouds"></div>
-
-      <nav id="header_wrapper">
-        <div id="header" class="clearfix">
-          <div class="row">
-              <div class="twelvecol">
-                  <a href="en.html" id="logo"><img src="images/logo_en.png"></a>
-
-                  <ul id="nav">
-                      <li>
-                          <a href="#container">{{ translation.HOME }}</a>
-                      </li>
-                      <li>
-                          <a href="/miner">{{ translation.MINER }}</a>
-                      </li>
-                      <li>
-                          <a href="#showcase">{{ translation.APPLICATIONS }}</a>
-                      </li>
-                      <li>
-                          <a href="https://github.com/DescartesChain">{{ translation.TECHNOLOGY }}</a>
-                      </li>
-                      <li>
-                          <a href="#features">{{ translation.ROADMAP }}</a>
-                      </li>
-                      <li>
-                          <a href="#pricing">{{ translation.TEAM }}</a>
-                      </li>
-                      <li id="i18n"><a href="/?clang=zh">中文</a></li>
-                      <li id="i18n"><a href="/?clang=en">English</a></li>
-                  </ul>
-              </div>
-          </div>
-        </div>
-      </nav>
-
-     
-    </header> --}}
+      <div class="clouds"></div>     
+    </header>
  <div id="home">
           <div class="home_box bounce_fade">
               <span class="slider_text1">{{ translation.PROJECT_NAME }}</span>
