--- a/views/success.backup.hbs
+++ b/views/success.backup.hbs
@@ -5,17 +5,103 @@
   {{/inline}}
 
   {{#*inline "content-block"}}
-  
+        <header id="header_wrapper" class="shrink">
+        <!--begin header -->
+        <div id="header" class="clearfix">
+            <!--begin row -->
+            <div class="row">
+                <!--begin twelvecol -->
+                <div class="twelvecol">
+                    <!--begin logo -->
+                    <a href="index.html" id="logo"><img src="images/logo.png"></a>
+                    <!--end logo -->
+                    <!--begin purchase button -->
+                    <!--<a href="#" class="purchase">Purchase Now</a>-->
+                    <!--end purchase button -->
+
+                    <!--begin nav -->
+                    <ul id="nav">
+                        <li>
+                            <a href="index.html">首页</a>
+                        </li>
+                        <li>
+                            <a href="">矿机</a>
+                        </li>
+                        <li>
+                            <a href="index.html#showcase">应用场景</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/DescartesChain">技术资源</a>
+                        </li>
+                        <li>
+                            <a href="index.html#features">发展规划</a>
+                        </li>
+                        <li>
+                            <a href="index.html#pricing">团队</a>
+                        </li>
+                        <li id="i18n"><a href="minerEn.html"> En </a></li>
+                        <!--<li class="last">
+                            <a href="#subscribe">Subscribe</a>
+                        </li>-->
+                    </ul>
+                    <!--end nav -->
+
+                </div>
+                <!--end twelvecol -->
+
+            </div>
+            <!--end row -->
+
+        </div>
+        <!--end header -->
+
+    </header>
     <!--end header_wrapper -->
+
     <!-----第一版------------->
     <!--begin nine_section_wrapper -->
     <section  class="nine_section_wrapper cart_banner_title">
         <!--begin nine_section -->
-        <div class="nine_section"><div class="cart_banner_title_t">{{ translation.TITLE_ORDER }}</div> </div>
+        <div class="nine_section"><div class="cart_banner_title_t">兑换成功</div> </div>
         <!--end nine_section -->
     </section>
     <!--end nine_section -->
     <!-----第一版------------->
+    <!-----第二版------------->
+    <!--begin nine_section_wrapper -->
+    <section  class="nine_section_wrapper cart_success">
+        <!--begin nine_section -->
+        <div class="nine_section">
+            <div class="cart_success_title">兑换成功</div>
+            <div class="cart_success_t">
+                <p class="t">谢谢您的参与！</p>
+                <p class="c">兑换成功的邮件已经发往您的邮箱，请注意查收。</p>
+            </div>
+            <div class="cart_success_con">
+                <ul>
+                    <li class="clearfix">
+                        <div class="li_l text_align_right">订单号：</div>
+                        <div class="li_r">20156326633</div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="li_l text_align_right">姓名：</div>
+                        <div class="li_r">可是大</div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="li_l text_align_right">电话：</div>
+                        <div class="li_r">0371-666666</div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="li_l text_align_right">邮箱：</div>
+                        <div class="li_r">20156326633</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!--end nine_section -->
+    </section>
+    <!--end nine_section -->
+    <!-----第二版------------->
     <!-----第二版------------->
     <!--begin nine_section_wrapper -->
     <section  class="nine_section_wrapper cart_main">
@@ -26,9 +112,9 @@
                     <thead>
                     <tr>
                         <th></th>
-                        <th>{{ translation.ORDER_PRICE }}</th>
-                        <th>{{ translation.ORDER_QUANTITY }}</th>
-                        <th>{{ translation.ORDER_AMOUNT }}</th>
+                        <th>价格</th>
+                        <th>数量</th>
+                        <th>总价</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -83,19 +169,20 @@
                     </tbody>
                 </table>
             </div>
+            <div class="cart_button text_align_right">
+                <a class="but red" href="">支付</a>
+                <a class="but red" href="">使用兑换码</a>
+            </div>
         </div>
         <!--end nine_section -->
     </section>
   {{/inline}}
 
   {{#*inline "modal-block"}}
-
-    
+    <!-- No Modal -->
   {{/inline}}
 
   {{#*inline "scripts-block"}}
-    <script src="js/jquery-1.10.2.min.js"></script>
-    <script src="js/jquery-migrate-1.2.1.js"></script>
     <!-- scripts concatenated and minified via ant build script-->
     <script src="js/modernizr-2.6.1.min.js"></script>
     <script src="js/conditional.js"></script>
@@ -165,6 +252,6 @@
             // }
         });
     </script>
-  <!--end shrink header script -->
+    <!--end shrink header script -->
   {{/inline}}
 {{/layouts/base}}
