--- a/views/partials/includes/nav.hbs
+++ b/views/partials/includes/nav.hbs
@@ -37,6 +37,12 @@
                         <!--<li class="last">
                             <a href="#subscribe">Subscribe</a>
                         </li>-->
+                       <!--登录前-->
+                         <div class="header_profile"> <a class="log_aa" href="">登录</a><a class="reg_aa" href="">注册</a></div>
+                         <!--登录前-->
+                         <!--登录后-->
+                         <div class="header_profile" style="display: none"> <a class="user_a" href=""><i class="fa fa-user-circle" aria-hidden="true"></i>Samer Hassan</a></div>
+                         <!--登录后-->
                     </ul>
                     <!--end nav -->
 
