--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2565,3 +2565,14 @@ table.responsive th{font-size:16px;line-height:40px;}
 .money_con .money_but{color:#fff;display:block;margin:20px auto;background:#003caa;height:45px;line-height:45px;text-align:center;width:70%;border-radius:5px;font-size:16px;transition:all 0.3s;}
 .money_con .money_but:hover{
 	opacity:.7;filter:alpha(opacity=70)}
+
+
+
+	/*****************************/
+	.header_profile{position:absolute;right:-115px;top:0px;margin: 34px 14px 0 14px;line-height:20px;max-width:100px;height:20px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
+.header_profile a{display:inline-block;color:#fff;margin-right:6px;font-size:12px;text-decoration:underline;line-height:20px;}
+.header_profile a:hover{text-decoration: none;}
+.header_profile i{display:inline;margin-right:5px;
+	text-decoration: none;font-size:18px;}
+.header_profile a.user_a{text-decoration:none;}
+@media(max-width:769px){.header_profile {right:100px;}}
