--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,18 +1,19 @@
 {{#> layouts/base }}
   {{#*inline "content-block"}}
-    <header id="intro">
+    <div id="intro">
       <div class="stars"></div>
       <div class="twinkling"></div>
-      <div class="clouds"></div>     
-    </header>
- <div id="home">
+      <div class="clouds"></div>  
+      <div id="home">
           <div class="home_box bounce_fade">
               <span class="slider_text1">{{ translation.PROJECT_NAME }}</span>
               <span class="slider_text2">{{ translation.SLOGON }}</span>
               <a href="./white-paper.pdf" class="slider_text3"><i class="fa fa-th-large"></i>&nbsp;{{ translation.WHITE_PAPER }}</a>
               <a href="#" class="slider_text4"><i class="fa fa-money"></i>&nbsp;{{ translation.TOKEN_WALLET }}</a>
           </div>
-      </div>
+      </div>   
+    </div>
+ 
       
     <section  class="nine_section_wrapper">
         <!--begin nine_section -->
